# sifypy

./: .gitattributes  LICENSE  READMD.md  pyproject.toml
sifypy/: Fsys.py  Fsys.pyi  __init__.py
sifypy/_typing/: typing.py  typing.pyi
sifypy/core/: logic.py
