[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sifypy"
version = "1.0.0-alpha.2"
license = {file = "LICENSE.txt"}
description = "A powerful, lightweight Python library designed to provide a variety of functions."
authors = [{name = "SifyPy Developers"}]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
  'Development Status :: 3 - Alpha',
  'License :: OSI Approved :: MIT License',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',	
  'Topic :: Software Development',
]
dependencies = [
]

[project.urls]
source = "https://github.com/sifypy/sifypy"
tracker = "https://github.com/sifypy/sifypy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sifypy*"]
